--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                     </td>
                 </tr>
 
+                <tr>
+                    <td>Tests</td>
+                    <td>
+                        <p>I didn't have a lot of time left so the tests are not really sophisticated. They are mostly auto-generated using grails' 'generate-all'.</p>
+                        <p>There is not much to say here except that I wish I had more time to do these, as it seems they are more useful than I thought they would be.</p>
+                    </td>
+                </tr>
+
                 </tbody>
             </table>
 
